// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageContainer component renders correctly with multiple messages 1`] = `
<div
  className="bg-gray-100 dark:bg-gray-700 inline-block p-5 pb-6 rounded-3xl shadow-xl "
>
  <div
    className="flex mb-4 mx-2"
  >
    <p
      className="text-2xl font-bold text-gray-800 dark:text-gray-300"
    >
      TestTitle
    </p>
    <button
      className="inline ml-auto my-auto"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="stroke-current text-gray-500 dark:text-gray-300 w-5 h-5"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
  <div
    className="grid grid-cols-1 space-y-5"
  >
    <div
      className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
    >
      <div
        className="flex"
      >
        <div
          className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
        >
          <svg
            viewBox="0 0 1 1"
          >
            <rect
              fill="#000"
              height={1}
              width={1}
            />
            <text
              dy="0.178"
              fill="#FFF"
              style={
                Object {
                  "fontFamily": "Inter",
                  "fontSize": 0.5,
                  "fontWeight": "bold",
                }
              }
              textAnchor="middle"
              x={0.5}
              y={0.5}
            >
              Pr
            </text>
          </svg>
        </div>
        <div
          className="my-auto inline-block ml-5"
        >
          <p
            className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
          >
            Test title
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — primary
          </p>
        </div>
      </div>
      <p
        className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
      >
        <span>
          This is a simple test message.

It spans over multiple lines.
        </span>
      </p>
      <div
        className="flex"
      >
        <div
          className="inline-block"
        >
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — by 
            Primary
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            2 hours ago
          </p>
        </div>
      </div>
    </div>
    <div
      className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
    >
      <div
        className="flex"
      >
        <div
          className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
        >
          <svg
            viewBox="0 0 1 1"
          >
            <rect
              fill="#000"
              height={1}
              width={1}
            />
            <text
              dy="0.178"
              fill="#FFF"
              style={
                Object {
                  "fontFamily": "Inter",
                  "fontSize": 0.5,
                  "fontWeight": "bold",
                }
              }
              textAnchor="middle"
              x={0.5}
              y={0.5}
            >
              Pr
            </text>
          </svg>
        </div>
        <div
          className="my-auto inline-block ml-5"
        >
          <p
            className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
          >
            Test title
          </p>
        </div>
      </div>
      <p
        className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
      >
        <span>
          
        </span>
      </p>
      <div
        className="flex"
      >
        <div
          className="inline-block"
        >
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — by 
            Primary
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            2 hours ago
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageContainer component renders correctly with no messages 1`] = `
<div
  className="bg-gray-100 dark:bg-gray-700 inline-block p-5 pb-6 rounded-3xl shadow-xl "
>
  <div
    className="flex mb-4 mx-2"
  >
    <p
      className="text-2xl font-bold text-gray-800 dark:text-gray-300"
    >
      TestTitle
    </p>
    <button
      className="inline ml-auto my-auto"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="stroke-current text-gray-500 dark:text-gray-300 w-5 h-5"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
  <div
    className="grid grid-cols-1 space-y-5"
  />
</div>
`;

exports[`MessageContainer component renders correctly with one message 1`] = `
<div
  className="bg-gray-100 dark:bg-gray-700 inline-block p-5 pb-6 rounded-3xl shadow-xl "
>
  <div
    className="flex mb-4 mx-2"
  >
    <p
      className="text-2xl font-bold text-gray-800 dark:text-gray-300"
    >
      TestTitle
    </p>
    <button
      className="inline ml-auto my-auto"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="stroke-current text-gray-500 dark:text-gray-300 w-5 h-5"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </button>
  </div>
  <div
    className="grid grid-cols-1 space-y-5"
  >
    <div
      className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
    >
      <div
        className="flex"
      >
        <div
          className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
        >
          <svg
            viewBox="0 0 1 1"
          >
            <rect
              fill="#000"
              height={1}
              width={1}
            />
            <text
              dy="0.178"
              fill="#FFF"
              style={
                Object {
                  "fontFamily": "Inter",
                  "fontSize": 0.5,
                  "fontWeight": "bold",
                }
              }
              textAnchor="middle"
              x={0.5}
              y={0.5}
            >
              Pr
            </text>
          </svg>
        </div>
        <div
          className="my-auto inline-block ml-5"
        >
          <p
            className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
          >
            Test title
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — primary
          </p>
        </div>
      </div>
      <p
        className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
      >
        <span>
          This is a simple test message.

It spans over multiple lines.
        </span>
      </p>
      <div
        className="flex"
      >
        <div
          className="inline-block"
        >
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — by 
            Primary
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            2 hours ago
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
